Value typing issue in pie menu #47009

Closed
opened 2015-12-18 04:03:04 +01:00 by Leon Cheung · 9 comments
Member

System Intormation
Windows 8.1 | GTX680

Blender Version
Broken: 2.6.4 d970f02

Description
When using value input field as a pie menu item, it only accepts "0" "5" and ./*+ and a few other signs, which seems something quite strange. Thanks for checking.

How to Reproduce

  1. run the script below.
  2. in 3D view, press Shift + Q, then try typing values there.
import bpy
from bpy.types import Menu, Panel, UIList

class VIEW3D_PIE2_temp(Menu):

    bl_label = "John's Object Pie Menu2"
    bl_idname = "object2.tools_menu"  
    
    
    def draw(self, context):
        layout = self.layout
        
        scene = context.scene
        rd = scene.render

        pie = layout.menu_pie()
        
        col = pie.column(align=True)
        col.label(text="Resolution:")
        
        col.prop(rd, "resolution_x", text="X")
        col.prop(rd, "resolution_y", text="Y")
        col.prop(rd, "resolution_percentage", text="")
        
        
        
        
addon_keymaps = []

def register():
    bpy.utils.register_class(VIEW3D_PIE2_temp)
    
    
    
    wm = bpy.context.window_manager
    km = bpy.context.window_manager.keyconfigs.active.keymaps['Object Mode']
    
    kmi = km.keymap_items.new('wm.call_menu_pie', 'Q', 'PRESS',shift=True)
    kmi.properties.name = 'object2.tools_menu' 
    addon_keymaps.append(km)


def unregister():
    bpy.utils.unregister_class(VIEW3D_PIE2_temp)
    
    
if __name__ == "__main__":
    register()
**System Intormation** Windows 8.1 | GTX680 **Blender Version** Broken: 2.6.4 d970f02 **Description** When using value input field as a pie menu item, it only accepts "0" "5" and ./*+ and a few other signs, which seems something quite strange. Thanks for checking. **How to Reproduce** 1. run the script below. 2. in 3D view, press Shift + Q, then try typing values there. ``` import bpy from bpy.types import Menu, Panel, UIList class VIEW3D_PIE2_temp(Menu): bl_label = "John's Object Pie Menu2" bl_idname = "object2.tools_menu" def draw(self, context): layout = self.layout scene = context.scene rd = scene.render pie = layout.menu_pie() col = pie.column(align=True) col.label(text="Resolution:") col.prop(rd, "resolution_x", text="X") col.prop(rd, "resolution_y", text="Y") col.prop(rd, "resolution_percentage", text="") addon_keymaps = [] def register(): bpy.utils.register_class(VIEW3D_PIE2_temp) wm = bpy.context.window_manager km = bpy.context.window_manager.keyconfigs.active.keymaps['Object Mode'] kmi = km.keymap_items.new('wm.call_menu_pie', 'Q', 'PRESS',shift=True) kmi.properties.name = 'object2.tools_menu' addon_keymaps.append(km) def unregister(): bpy.utils.unregister_class(VIEW3D_PIE2_temp) if __name__ == "__main__": register() ```
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscribers: @ZhangYu, @xuekepei

Added subscribers: @ZhangYu, @xuekepei
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member

Can confirm

Can confirm

Added subscriber: @mont29

Added subscriber: @mont29

Problems comes from Pie menu using 1,2,3,4,6,7,8,9 as 'arrow directions' to quickly select relevant entries… That should be inhibited when a widget is being edited, imho.

Problems comes from Pie menu using 1,2,3,4,6,7,8,9 as 'arrow directions' to quickly select relevant entries… That should be inhibited when a widget is being edited, imho.
Bastien Montagne self-assigned this 2015-12-18 16:32:13 +01:00

This issue was referenced by 63015d3a09

This issue was referenced by 63015d3a099691e221ab60ea3e3e81bc4481ca98

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Fixed in master, note however that you are kinda abusing pies here, they are not really designed to host editable buttons like that afaik (they are supposed to be another type of menu, not dialog boxes…).

Fixed in master, note however that you are kinda abusing pies here, they are not really designed to host editable buttons like that afaik (they are supposed to be another type of menu, not dialog boxes…).
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47009
No description provided.